added messages to the chat html

--- a/django_chat_app/chat/templates/chat/index.html
+++ b/django_chat_app/chat/templates/chat/index.html
@@ -5,13 +5,17 @@
     .page-content {
         padding: 100px;
     }
+
+    .light-text {
+        color: rgba(0,0,0,0.4);
+    }
 </style>
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!-- Title -->
-            <span class="mdl-layout-title">Chatroom {{ request.user }}</span>
+            <span class="mdl-layout-title">Chatroom {{ request.user.first_name }}</span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
@@ -24,7 +28,7 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title"> Chatroom {{ request.user }}</span>
+        <span class="mdl-layout-title"> Chatroom {{ request.user.first_name }}</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
@@ -35,9 +39,16 @@
     <main class="mdl-layout__content">
         <div class="page-content">
 
-            <form action="#">
+            {% for message in messages %} 
+            <div>
+                <span class="light-text">[{{ message.created_at }}]</span> {{ message.author.first_name }} : <i>{{ message.text }}</i>
+            </div>
+            {% endfor %}
+
+            <form action="/chat/" method="post">
+                {% csrf_token %}
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" id="sample3">
+                    <input class="mdl-textfield__input" name="textmessage" type="text" id="sample3">
                     <label class="mdl-textfield__label" for="sample3">Text...</label>
                 </div>
 
