--- a/django_chat_app/chat/templates/auth/login.html
+++ b/django_chat_app/chat/templates/auth/login.html
@@ -15,9 +15,7 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!-- Title -->
-            {% if request.user.is_authenticated %}
-            <span class="mdl-layout-title"> Chatroom {{ request.user.first_name }}</span>
-            {% endif %}
+            <span class="mdl-layout-title">Login</span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
@@ -30,9 +28,7 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        {% if request.user.is_authenticated %}
-        <span class="mdl-layout-title"> Chatroom {{ request.user.first_name }}</span>
-        {% endif %}
+        <span class="mdl-layout-title">Login</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
@@ -43,28 +39,24 @@
     <main class="mdl-layout__content">
         <div class="page-content">
 
-            {% if request.user.is_authenticated %}
-            {% for message in messages %}
-            <div>
-                <span class="light-text">[{{ message.created_at }}]</span> {{ message.author.first_name }} : <i>{{
-                    message.text }}</i>
-            </div>
-            {% endfor %}
-
-            <form action="/chat/" method="post">
+            <form action="/login/" method="post">
                 {% csrf_token %}
+                <input type="hidden" name="redirectRout" value="{{ redirectRout }}">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" name="textmessage" type="text" id="sample3">
-                    <label class="mdl-textfield__label" for="sample3">Text...</label>
+                    <input name="username" class="mdl-textfield__input" type="text" id="username">
+                    <label class="mdl-textfield__label" for="username">Username</label>
                 </div>
-
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input name="password" class="mdl-textfield__input" type="password" id="password">
+                    <label class="mdl-textfield__label" for="password">Password</label>
+                </div>
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    Button
+                    Login
                 </button>
             </form>
-            {% else %}
-            <h1>Not Logged In</h1>
-            <p>You are not logged in, please log in <a href="/login/">here</a></p>            
+
+            {% if wrongUser %}
+            <p>Wrong username or password</p>
             {% endif %}
         </div>
     </main>
