added base.html and styles

--- a/django_chat_app/chat/templates/auth/login.html
+++ b/django_chat_app/chat/templates/auth/login.html
@@ -1,63 +1,26 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<style>
-    .page-content {
-        padding: 100px;
-    }
+{% extends "base.html" %}
+{% block content %}
 
-    .light-text {
-        color: rgba(0, 0, 0, 0.4);
-    }
-</style>
 
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">Login</span>
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Login</span>
-        <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-        </nav>
+<form action="/login/" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="redirectRout" value="{{ redirectRout }}">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input name="username" class="mdl-textfield__input" type="text" id="username">
+        <label class="mdl-textfield__label" for="username">Username</label>
     </div>
-    <main class="mdl-layout__content">
-        <div class="page-content">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input name="password" class="mdl-textfield__input" type="password" id="password">
+        <label class="mdl-textfield__label" for="password">Password</label>
+    </div>
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+        Login
+    </button>
+</form>
 
-            <form action="/login/" method="post">
-                {% csrf_token %}
-                <input type="hidden" name="redirectRout" value="{{ redirectRout }}">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input name="username" class="mdl-textfield__input" type="text" id="username">
-                    <label class="mdl-textfield__label" for="username">Username</label>
-                </div>
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input name="password" class="mdl-textfield__input" type="password" id="password">
-                    <label class="mdl-textfield__label" for="password">Password</label>
-                </div>
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    Login
-                </button>
-            </form>
+{% if wrongUser %}
+<p>Wrong username or password</p>
+{% endif %}
 
-            {% if wrongUser %}
-            <p>Wrong username or password</p>
-            {% endif %}
-        </div>
-    </main>
-</div>
+
+{% endblock %}
