--- a/django_chat_app/chat/templates/chat/index.html
+++ b/django_chat_app/chat/templates/chat/index.html
@@ -1,71 +1,30 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<style>
-    .page-content {
-        padding: 100px;
-    }
+{% extends "base.html" %}
+{% block content %}
 
-    .light-text {
-        color: rgba(0, 0, 0, 0.4);
-    }
-</style>
 
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <!-- Title -->
-            {% if request.user.is_authenticated %}
-            <span class="mdl-layout-title"> Chatroom {{ request.user.first_name }}</span>
-            {% endif %}
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        {% if request.user.is_authenticated %}
-        <span class="mdl-layout-title"> Chatroom {{ request.user.first_name }}</span>
-        {% endif %}
-        <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-        </nav>
-    </div>
-    <main class="mdl-layout__content">
-        <div class="page-content">
-
-            {% if request.user.is_authenticated %}
-            {% for message in messages %}
-            <div>
-                <span class="light-text">[{{ message.created_at }}]</span> {{ message.author.first_name }} : <i>{{
-                    message.text }}</i>
-            </div>
-            {% endfor %}
-
-            <form action="/chat/" method="post">
-                {% csrf_token %}
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" name="textmessage" type="text" id="sample3">
-                    <label class="mdl-textfield__label" for="sample3">Text...</label>
-                </div>
-
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    Button
-                </button>
-            </form>
-            {% else %}
-            <h1>Not Logged In</h1>
-            <p>You are not logged in, please log in <a href="/login/">here</a></p>            
-            {% endif %}
-        </div>
-    </main>
+{% if request.user.is_authenticated %}
+{% for message in messages %}
+<div>
+    <span class="light-text">[{{ message.created_at }}]</span> {{ message.author.first_name }} : <i>{{
+        message.text }}</i>
 </div>
+{% endfor %}
+
+<form action="/chat/" method="post">
+    {% csrf_token %}
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" name="textmessage" type="text" id="sample3">
+        <label class="mdl-textfield__label" for="sample3">Text...</label>
+    </div>
+
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+        Button
+    </button>
+</form>
+{% else %}
+<h1>Not Logged In</h1>
+<p>You are not logged in, please log in <a href="/login/">here</a></p>
+{% endif %}
+
+
+{% endblock %}
